--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,18 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Federick Yeh
     - name: Date of Birth
-      value: 14th March 1879
+      value: 3rd July 2002
     - name: Languages
-      value: English, German
+      value: English ◎, Mandarin ○, Japanese △
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: BS in Computer Science, Applied Mathematics
+      institution: Stony Brook University, New York, United States
+      year: 2020 - 2024
       description:
         - Description 1.
         - Description 2.
@@ -21,12 +21,11 @@
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+    - title: Regents Diploma with Honors, Advanced Designation, Mastery of Science, Mastery of Mathematics
+      institution: The Bronx High School of Science, New York, United States
+      year: 2016-2020
       description:
-        - Description 1.
-        - Description 2.
+        - Description 1
 
 - title: Experience
   type: time_table
@@ -72,18 +71,18 @@
   type: time_table
   contents:
     - year: 1921
-      items: 
-        - Nobel Prize in Physics 
+      items:
+        - Nobel Prize in Physics
         - Matteucci Medal
     - year: 2029
-      items: 
+      items:
         - Max Planck Medal
 
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
-      items: 
+    - title: Computer Graphics
+      items:
         - Description 1.
         - Description 2.
     - title: Topic 2.
@@ -94,4 +93,4 @@
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Piano
